// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordValidationList should render all validation items as errored 1`] = `
<div>
  <div
    class="chakra-card css-stnqs5"
  >
    <div
      class="chakra-card__header css-0"
    >
      <label
        class="chakra-text css-35ezg3"
      >
        Passwords must:
      </label>
    </div>
    <div
      class="chakra-card__body css-1161qt5"
    >
      <ul
        class="css-1f8kndt"
        role="list"
      >
        <li
          class="css-1o9fset"
          data-testid="password-validation-list-item-error"
        >
          <svg
            class="chakra-icon chakra-icon css-ikjmp3"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
              fill="currentColor"
            />
          </svg>
          Be at least 8 characters long
        </li>
        <li
          class="css-1o9fset"
          data-testid="password-validation-list-item-error"
        >
          <svg
            class="chakra-icon chakra-icon css-ikjmp3"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
              fill="currentColor"
            />
          </svg>
          Contain a uppercase letter
        </li>
        <li
          class="css-1o9fset"
          data-testid="password-validation-list-item-error"
        >
          <svg
            class="chakra-icon chakra-icon css-ikjmp3"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
              fill="currentColor"
            />
          </svg>
          Contain a lowercase letter
        </li>
        <li
          class="css-1o9fset"
          data-testid="password-validation-list-item-error"
        >
          <svg
            class="chakra-icon chakra-icon css-ikjmp3"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
              fill="currentColor"
            />
          </svg>
          Contain a number
        </li>
        <li
          class="css-1o9fset"
          data-testid="password-validation-list-item-error"
        >
          <svg
            class="chakra-icon chakra-icon css-ikjmp3"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
              fill="currentColor"
            />
          </svg>
          Contain a special character
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`PasswordValidationList should render all validation items as valid 1`] = `
<div>
  <div
    class="chakra-card css-stnqs5"
  >
    <div
      class="chakra-card__header css-0"
    >
      <label
        class="chakra-text css-35ezg3"
      >
        Passwords must:
      </label>
    </div>
    <div
      class="chakra-card__body css-1161qt5"
    >
      <ul
        class="css-1f8kndt"
        role="list"
      >
        <li
          class="css-1b3cqhx"
          data-testid="password-validation-list-item-valid"
        >
          <svg
            class="chakra-icon chakra-icon css-ikjmp3"
            focusable="false"
            role="presentation"
            viewBox="0 0 14 14"
          >
            <g
              fill="currentColor"
            >
              <polygon
                points="5.5 11.9993304 14 3.49933039 12.5 2 5.5 8.99933039 1.5 4.9968652 0 6.49933039"
              />
            </g>
          </svg>
          Be at least 8 characters long
        </li>
        <li
          class="css-1b3cqhx"
          data-testid="password-validation-list-item-valid"
        >
          <svg
            class="chakra-icon chakra-icon css-ikjmp3"
            focusable="false"
            role="presentation"
            viewBox="0 0 14 14"
          >
            <g
              fill="currentColor"
            >
              <polygon
                points="5.5 11.9993304 14 3.49933039 12.5 2 5.5 8.99933039 1.5 4.9968652 0 6.49933039"
              />
            </g>
          </svg>
          Contain a uppercase letter
        </li>
        <li
          class="css-1b3cqhx"
          data-testid="password-validation-list-item-valid"
        >
          <svg
            class="chakra-icon chakra-icon css-ikjmp3"
            focusable="false"
            role="presentation"
            viewBox="0 0 14 14"
          >
            <g
              fill="currentColor"
            >
              <polygon
                points="5.5 11.9993304 14 3.49933039 12.5 2 5.5 8.99933039 1.5 4.9968652 0 6.49933039"
              />
            </g>
          </svg>
          Contain a lowercase letter
        </li>
        <li
          class="css-1b3cqhx"
          data-testid="password-validation-list-item-valid"
        >
          <svg
            class="chakra-icon chakra-icon css-ikjmp3"
            focusable="false"
            role="presentation"
            viewBox="0 0 14 14"
          >
            <g
              fill="currentColor"
            >
              <polygon
                points="5.5 11.9993304 14 3.49933039 12.5 2 5.5 8.99933039 1.5 4.9968652 0 6.49933039"
              />
            </g>
          </svg>
          Contain a number
        </li>
        <li
          class="css-1b3cqhx"
          data-testid="password-validation-list-item-valid"
        >
          <svg
            class="chakra-icon chakra-icon css-ikjmp3"
            focusable="false"
            role="presentation"
            viewBox="0 0 14 14"
          >
            <g
              fill="currentColor"
            >
              <polygon
                points="5.5 11.9993304 14 3.49933039 12.5 2 5.5 8.99933039 1.5 4.9968652 0 6.49933039"
              />
            </g>
          </svg>
          Contain a special character
        </li>
      </ul>
    </div>
  </div>
</div>
`;
